--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,19 +1,15 @@
 <% layout('layouts/boilerplate')%>
-    <h1>Register</h1>
-    <form class="needs-validation" action="/register" method="POST" novalidate>
+    <h1>Login</h1>
+    <form class="needs-validation" action="/login" method="POST" novalidate>
         <div class="mb-3">
             <label class="form-label" for="username">Username</label>
             <input class="form-control" type="text" id="username" name="username" required>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="email">Email</label>
-            <input class="form-control" type="email" id="email" name="email" required>
         </div>
         <div class="mb-3">
             <label class="form-label" for="password">Password</label>
             <input class="form-control" type="password" id="password" name="password" required>
         </div>
         <div class="mb-3">
-            <button class="btn btn-success">Register</button>
+            <button class="btn btn-success">Login</button>
         </div>
     </form>
