--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,11 @@
                 <a class="nav-link" href="/tourspots">Tourist Spots</a>
                 <a class="nav-link" href="/tourspots/new">New Tourist Spot</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="/logout">Logout</a>
+            </div>
         </div>
     </div>
 </nav>
