--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" data-bs-theme="dark">
+<nav
+    class="navbar navbar-expand-lg bg-body-tertiary sticky-top"
+    data-bs-theme="dark"
+>
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">TourExplore</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/">TourExplore</a>
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -12,12 +22,14 @@
                 <a class="nav-link" href="/tourspots/new">New Tourist Spot</a>
             </div>
             <div class="navbar-nav ms-auto">
+                <!-- Display only if user is NOT logged in -->
                 <% if (!currentUser) {%>
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
-                    <% } else {%>
-                        <a class="nav-link" href="/logout">Logout</a>
-                        <%}%>
+                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/register">Register</a>
+                <% } else {%>
+                <!-- Display only if user is logged in -->
+                <a class="nav-link" href="/logout">Logout</a>
+                <%}%>
             </div>
         </div>
     </div>
