--- a/views/tourspots/new.ejs
+++ b/views/tourspots/new.ejs
@@ -7,6 +7,7 @@
             class="needs-validation"
             action="/tourspots/new"
             method="POST"
+            enctype="multipart/form-data"
             novalidate
         >
             <div class="mb-3">
@@ -31,7 +32,22 @@
                 />
             </div>
 
+            <!-- <div class="mb-3">
+                <label for="image" class="form-label">Add Images</label>
+                <input type="file" name="tourspot[image]" id="image" multiple />
+            </div> -->
+
             <div class="mb-3">
+                <label for="image" class="form-label">Add Images</label>
+                <input
+                    class="form-control"
+                    name="tourspot[image]"
+                    type="file"
+                    id="image"
+                    multiple
+                />
+            </div>
+            <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
                 <input
                     class="form-control"
@@ -40,7 +56,7 @@
                     name="tourspot[image]"
                     required
                 />
-            </div>
+            </div> -->
 
             <div class="mb-3">
                 <label class="form-label" for="expected_budget"
