Added Bing Maps API integration

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,6 +10,12 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <script
+            type="text/javascript"
+            src="http://www.bing.com/api/maps/mapcontrol?callback=GetMap"
+            async
+            defer
+        ></script>
     </head>
 
     <body class="d-flex flex-column vh-100">
