--- a/views/tourspots/index.ejs
+++ b/views/tourspots/index.ejs
@@ -1,4 +1,10 @@
 <% layout('layouts/boilerplate')%>
+
+<div
+    id="indexPageMap"
+    style="position: relative; width: 100%; height: 500px"
+></div>
+
 <h1>All Tourist Spots</h1>
 <div class="container mb-3">
     <a class="btn btn-primary" href="/tourspots/new">Add Tourist Spot</a>
@@ -43,3 +49,10 @@
 
     <% } %>
 </ul>
+
+<script>
+    const mapToken = '<%-process.env.BING_API_KEY%>';
+    const tourspots = <%- JSON.stringify(tourspots) %>;
+</script>
+
+<script src="/js/clusterMap.js"></script>
