--- a/views/tourspots/new.ejs
+++ b/views/tourspots/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <h1 class="text-center">New Tourist Spot</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3">
         <form
             class="needs-validation"
             action="/tourspots/new"
