--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,19 +1,65 @@
 <% layout('layouts/boilerplate')%>
-    <h1>Register</h1>
-    <form class="needs-validation" action="/register" method="POST" novalidate>
-        <div class="mb-3">
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" id="username" name="username" required>
+
+<div class="container justify-content-center align-items-center mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img
+                    src="https://images.unsplash.com/photo-1528127269322-539801943592"
+                    alt=""
+                    class="card-img-top"
+                />
+                <div class="card-body">
+                    <h5 class="card-title">Register</h5>
+                    <form
+                        class="needs-validation"
+                        action="/register"
+                        method="POST"
+                        novalidate
+                    >
+                        <div class="mb-3">
+                            <label class="form-label" for="username"
+                                >Username</label
+                            >
+                            <input
+                                class="form-control"
+                                type="text"
+                                id="username"
+                                name="username"
+                                required
+                                autofocus
+                            />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="email">Email</label>
+                            <input
+                                class="form-control"
+                                type="email"
+                                id="email"
+                                name="email"
+                                required
+                            />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password"
+                                >Password</label
+                            >
+                            <input
+                                class="form-control"
+                                type="password"
+                                id="password"
+                                name="password"
+                                required
+                            />
+                        </div>
+                        <div class="mb-3">
+                            <button class="btn btn-success w-100">
+                                Register
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="email">Email</label>
-            <input class="form-control" type="email" id="email" name="email" required>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" id="password" name="password" required>
-        </div>
-        <div class="mb-3">
-            <button class="btn btn-success">Register</button>
-        </div>
-    </form>
+    </div>
+</div>
