--- a/views/tourspots/show.ejs
+++ b/views/tourspots/show.ejs
@@ -80,7 +80,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div id="map"></div>
+        <div id="map" class="mb-3"></div>
         <!-- Show this form only for signed in users -->
         <% if (currentUser) { %>
         <h2>Leave a Review</h2>
