--- a/client/src/stylesheets/Home.css
+++ b/client/src/stylesheets/Home.css
@@ -1,13 +1,4 @@
-#root {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 1000;
-}
-
-body {
+.homeDiv {
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
         url('https://images.unsplash.com/photo-1533587851505-d119e13fa0d7');
@@ -17,16 +8,16 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
-.cover-container {
+.homeDiv .cover-container {
     max-width: 60vw;
 }
 
-.body-text {
+.homeDiv .body-text {
     color: white;
 }
 
-.body-text button,
-.body-text button:hover {
+.homeDiv .body-text button,
+.homeDiv .body-text button:hover {
     color: #333;
     text-shadow: none;
 }
