--- a/client/src/stylesheets/HomeAppBar.css
+++ b/client/src/stylesheets/HomeAppBar.css
@@ -1,9 +1,9 @@
-.home-app-bar {
+.homeAppBar {
     background: transparent !important;
     box-shadow: none !important;
 }
 
-.button-text {
+.homeAppBar .button-text {
     font-weight: 700 !important;
     color: rgba(255, 255, 255, 0.5);
     padding: 0.25rem 0;
@@ -11,16 +11,16 @@
     border-bottom: 0.25rem solid transparent;
 }
 
-.button-text:hover {
+.homeAppBar .button-text:hover {
     color: rgba(255, 255, 255, 0.5);
     border-bottom-color: rgba(255, 255, 255, 0.5);
 }
 
-.menu-buttons button:hover {
+.homeAppBar .menu-buttons button:hover {
     background: transparent;
 }
 
-.button-text.active {
+.homeAppBar .button-text.active {
     color: white;
     border-bottom-color: white;
 }
